# ElkEngine

./: .editorconfig  .gitignore  AGENTS.md  CMakeLists.txt  ElkEngine.slnx  README.ja.md  README.md
.claude/: settings.local.json
Documentation/: 実装仕様書.md
Editor/: CMakeLists.txt
Editor/Source/: EditorApplication.h  main.cpp
EditorBridge/: CMakeLists.txt
EditorBridge/Private/: EditorBridge.cpp
EditorBridge/Public/: EditorBridge.h
ElkEngine/: CMakeLists.txt
ElkEngine/Private/Core/: Engine.cpp
ElkEngine/Private/Core/Logger/: LogBuffer.cpp  Logger.cpp  LoggerSpdlog.cpp
ElkEngine/Private/Core/Memory/: MemoryLogger.cpp  MemoryManager.cpp  StackAllocator.cpp
ElkEngine/Private/ECS/: TypeRegistry.cpp
ElkEngine/Public/ElkEngine/Core/: Application.h  Engine.h  EngineAPI.h
ElkEngine/Public/ElkEngine/Core/Logger/: GameLogger.h  ILogSink.h  LogBuffer.h  LogLevel.h  Logger.h  LoggerService.h  LoggerSpdlog.h  TagRegistry.h
ElkEngine/Public/ElkEngine/Core/Logger/Details/: ILogSink.h  LogBuffer.h
ElkEngine/Public/ElkEngine/Core/Memory/: AllocatorType.h  IAllocator.h  MemoryConfig.h  MemoryHelper.h  MemoryLogger.h  MemoryManager.h  StackAllocator.h  StdAllocatorAdapter.h
ElkEngine/Public/ElkEngine/Core/Utility/: ServiceLocator.h
ElkEngine/Public/ElkEngine/ECS/: TypeRegistration.h  TypeRegistry.h
Runtime/: CMakeLists.txt
Runtime/Source/: GameApplication.cpp  GameApplication.h  main.cpp
Samples/: CMakeLists.txt
Scripts/: build.bat  build.sh  generate.bat  generate.ps1  setup.py
Tools/: CMakeLists.txt
cmake/: EngineUtils.cmake
